# opengl-utils

./: .gitignore  CMakeLists.txt  README.md  camera.c  camera.h  fragContainer.glsl  fragLight.glsl  glad.c  main  main.c  mesh.c  mesh.h  model.c  model.h  shader.c  textures.c  textures.h
include/: block.h  bullet.h  camera.h  framebuffer.h  lighting.h  model.h  perlin.h  skybox.h  textures.h
include/glad/: glad.h
src/: main.c
src/models/car/source/: Sketchfab_2023_03_09_19_28_32.blend
src/shaders/: borderOutline.glsl  cubemapFrag.glsl  cubemapVertex.glsl  cursorFrag.glsl  cursorVertex.glsl  example_transparency.glsl  example_vertex.glsl  fragContainer.glsl  reflectiveFrag.glsl  reflectiveVertex.glsl  screenFrag.glsl  screenVertex.glsl  vertex.glsl
src/utils/: block.c  block.h  bullet.c  camera.c  camera.h  framebuffer.c  glad.c  lighting.c  lighting.h  mesh.c  mesh.h  model.c  perlin.c  shader.c  shader.h  skybox.c  textures.c  textures.h
